--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-beautifulsoup4
-futures
-requests
-numpy
+beautifulsoup4==4.6.0
+certifi==2017.7.27.1
+chardet==3.0.4
+futures==3.1.1
+idna==2.6
+requests==2.18.4
+urllib3==1.22
