--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ certifi==2017.7.27.1
 chardet==3.0.4
 futures==3.1.1
 idna==2.6
+img2pdf==0.2.4
+olefile==0.44
+Pillow==4.3.0
 requests==2.18.4
 urllib3==1.22
